HMAN-342 FunctionalTest module changes from PR #94
   [HMAN-342](https://tools.hmcts.net/jira/browse/HMAN-342)

Changes to Functional Test module from PR #94:
* Data Setup App & `localDataSetup` gradle task.
* Future date custom value generator for use in TDs.
* Additional Step definitions for:
  * Verify CSV contents.
  * Run with extra CSV values.
  * Run with custom CSV limit.
  * Run ES with custom pagination size.
  * Check for non-success exit code.
  * Check for no WARN or ERROR in output.
 ...to see additional steps in use see PR #94.