@@ -111,12 +111,7 @@ task functional(type: JavaExec) {
     // clear away any previous BEFTA report output to prevent it being re-processed after a pre-cucumber error
     cleanBeftaReports()
 
-    boolean ciBuild = System.getenv().get("CI_BUILD") ?: false
-    if (!ciBuild) {
-      loadEnvFile(it, '.env.befta.local.env')
-      // Override with alternative test stub environment variables (i.e. if using bootWithCcd: need alternative test stub URL)
-      loadEnvFile(it, '.env.test.stub.service.env')
-    }
+    loadBeftaEnvVariables(it)
   }
 
   description = "Runs functional tests"
@@ -151,6 +146,27 @@ task functional(type: JavaExec) {
   outputs.upToDateWhen { false }
 }
 
+task localDataSetup(type: JavaExec) {
+  generateCucumberReports.enabled = false
+
+  doFirst {
+    // NB: must delete befta local run details to force re-import of def file
+    delete "befta_recent_executions_info_LOCAL.json"
+
+    loadBeftaEnvVariables(it)
+  }
+
+  description = "Loads BEFTA test definitions"
+  group = "Verification"
+
+  main = "uk.gov.hmcts.reform.next.hearing.date.updater.befta.DataSetupApp"
+  classpath += sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
+  args = [
+    'LOCAL'
+  ]
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 cucumberReports {
   outputDir = file("${rootDir}/target/cucumber")
   reports = files("${rootDir}/target/cucumber.json")
@@ -162,6 +178,15 @@ void cleanBeftaReports() {
   delete "${buildDir}/reports/tests/functional/"
   delete "${rootDir}/target/cucumber"
   delete "${rootDir}/target/cucumber.json"
+}
+
+void loadBeftaEnvVariables(Task execTask) {
+    boolean ciBuild = System.getenv().get("CI_BUILD") ?: false
+    if (!ciBuild) {
+      loadEnvFile(execTask, '.env.befta.local.env')
+      // Override with alternative test stub environment variables (i.e. if using bootWithCcd: need alternative test stub URL)
+      loadEnvFile(execTask, '.env.test.stub.service.env')
+    }
 }
 
 task integration(type: Test) {
